# SpectraJam

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
configs/: pilot.yaml  preferred-full.yaml  smoke.yaml
docs/: DESIGN.md  HANDOFF.md  RESEARCH.md  WINDOWS.md
plain_tessera_incremental/: HANDOFF.md  PIXEL_MLP.md  README.md  __init__.py  __main__.py  catalog.py  config.py  config.yaml  config_harvard_large_fields_all_windows.yaml  config_harvard_large_fields_w2.yaml  config_harvard_scalable.yaml  config_worldcover_noncrop.yaml  config_worldcover_noncrop_fast.yaml  config_worldcover_noncrop_pilot_w2.yaml  cutover_v2.sh  geometry.py  inference.py  materialize.py  pipeline.py  requirements.txt  storage.py  windows.py
plain_tessera_incremental/notebooks/: _admixture.py  _dna_likelihood.py  _dna_reporting.py  _dna_workflow.py  _pdf_evidence_pack.py  _pixel_analysis.py  completed_field_pixels_crop_separation.ipynb  incremental_window_embedding_evolution.ipynb  inspect_partial_embeddings_rgb.ipynb  inspect_worldcover_lulc_embeddings.ipynb  intercropping_embedding_dna.ipynb  intercropping_harvard_multilens.ipynb  intercropping_harvard_one_click.ipynb  intercropping_harvard_only_workbench.ipynb  intercropping_parent_evidence_v2.ipynb  intercropping_parentage_likelihood.ipynb  intercropping_pdf_evidence_pack.ipynb  intercropping_temporal_separability.ipynb
plain_tessera_incremental/tests/: test_admixture.py  test_core.py  test_dna_likelihood.py  test_dna_workflow.py  test_pixel_mlp_tools.py  test_v2_parallel.py  test_v2_spatial.py
plain_tessera_incremental/tools/: __init__.py  build_pixel_classification_dataset.py  download_rwanda_worldcover.py  prepare_harvard_large_field_input.py  prepare_worldcover_noncrop_input.py  train_pixel_mlp.py
src/spectrajam/: __init__.py  artifacts.py  candidate_frame.py  cli.py  config.py  contracts.py  frame_sources.py  incremental.py  ledger.py  losses.py  materialize.py  model_smoke.py  normalization.py  parity.py  pointstore.py  preprocessing.py  retry.py  sampling.py  stac.py  training.py  views.py  windows.py
src/spectrajam/models/: __init__.py  lora.py  student.py  tessera_v11.py  windowed.py
tests/: test_artifacts.py  test_candidate_frame.py  test_config_contracts.py  test_frame_sources.py  test_incremental.py  test_ledger_retry.py  test_materialize.py  test_model_smoke.py  test_models_and_losses.py  test_pointstore.py  test_preprocessing.py  test_sampling.py  test_stac_plan.py  test_windows.py
