[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spectrajam"
version = "0.1.0"
description = "Regional arbitrary-window S1/S2 encoders adapted from TESSERA"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SpectraJam contributors" }]
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
data = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15",
  "geopandas==1.1.4",
  "pyogrio==0.13.0",
  "pyproj==3.7.2",
  "rasterio==1.5.0",
  "shapely==2.1.2",
  "pystac-client>=0.8",
  "planetary-computer>=1.0",
]
train = [
  "numpy>=1.26",
  "torch>=2.3",
]
notebook = [
  "ipykernel>=6.29",
  "ipython>=8.20",
  "jupyterlab>=4.0",
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
spectrajam = "spectrajam.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spectrajam"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "plain_tessera_incremental/tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/test_incremental.py" = ["E402"]
"tests/test_model_smoke.py" = ["E402"]
"tests/test_models_and_losses.py" = ["E402"]
"tests/test_windows.py" = ["E402"]
